# Android-Studio-ffmpeg

./: README.md
第一种/MyApplication/app/: build.gradle
第一种/MyApplication/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
第一种/MyApplication/gradle/wrapper/: gradle-wrapper.properties
第二种/MyApplication3/app/: build.gradle
第二种/MyApplication3/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
第二种/MyApplication3/app/src/main/cpp/include/libavutil/: aes.h
第二种/MyApplication3/gradle/wrapper/: gradle-wrapper.properties
